force-app/main/default/objects/Lead_Fields_Mapping__mdt/Lead_Fields_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Lead Fields Mapping</label>
    <pluralLabel>Lead Fields Mappings</pluralLabel>
</CustomObject>