force-app/main/default/objects/Lead_Fields_Mapping__mdt/fields/Lead_Fields_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Fields_Name__c</fullName>
    <label>Lead Fields Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>