force-app/main/default/objects/Lead_Fields_Mapping__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Loan_Application__c</fullName>
            </value>
            <value>
                <fullName>Loan_Applicant__c</fullName>
            </value>
            <value>
                <fullName>Product__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>