force-app/main/default/objects/Lead_Fields_Mapping__mdt/fields/Target_Object_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Field_Name__c</fullName>
    <label>Target Object Field Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>