force-app/main/default/objects/Lead_Fields_Mapping__mdt/listViews/All_Config.listView-meta.xml
<ListView>
    <fullName>All_Config</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Target_Object__c</columns>
    <columns>Target_Object_Field_Name__c</columns>
    <columns>Lead_Fields_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Config</label>
</ListView>